# ToyRobotProgram

./: CMakeLists.txt  README.md
src/: robot.cpp  robot.hpp  toyRobot.cpp
test/: CMakeLists.txt  toyRobotTest.cpp
